--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 
-<link rel="stylesheet" href="/dist/css/main.min.css">
+<link rel="stylesheet" href="dist/css/main.min.css">
 </head>
 
 <body>
@@ -57,7 +57,7 @@
             <div class="aboutus__boxes">
                 <div class="aboutus__box">
                     <div class="aboutus__box-img">
-                        <img src="../dist/img/google-408194_640.png" alt="logo google">
+                        <img src="/dist/img/google-408194_640.png" alt="logo google">
                     </div>
                     <div class="aboutus__box-text">
                         <h3>SEO - Pozycjowanie</h3>
