--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 
-<link rel="stylesheet" href="/dist/css/main.min.css">
+<link rel="stylesheet" href="dist/css/main.min.css">
 </head>
 
 <body>
@@ -38,7 +38,6 @@
     </div>
 </nav>
 
-
     <header class="header">
         <div class="header__shadow"></div>
 
@@ -46,7 +45,6 @@
             <div class="header__welcome"></div>
             <h1 class="header__text"></h1>
             <div class="header__scroll">Scroll Down <i class="fa-solid fa-angles-down"></i></div>
-
         </div>
     </header>
 
@@ -57,7 +55,7 @@
             <div class="aboutus__boxes">
                 <div class="aboutus__box">
                     <div class="aboutus__box-img">
-                        <img src="../dist/img/google-408194_640.png" alt="logo google">
+                        <img src="dist/img/google-408194_640.png" alt="logo google">
                     </div>
                     <div class="aboutus__box-text">
                         <h3>SEO - Pozycjowanie</h3>
@@ -68,7 +66,7 @@
                 </div>
                 <div class="aboutus__box">
                     <div class="aboutus__box-img">
-                        <img src="../dist/img/wlan-3131126_640.png" alt="logo google">
+                        <img src="dist/img/wlan-3131126_640.png" alt="logo google">
                     </div>
                     <div class="aboutus__box-text">
                         <h3>RWD - Responsywność</h3>
@@ -86,7 +84,7 @@
 </footer>
 
 <script src="https://kit.fontawesome.com/0d513453bd.js" crossorigin="anonymous"></script>
-<script src="/dist/js/writing.min.js"></script>
+<script src="dist/js/writing.min.js"></script>
 </body>
 
 </html>
