--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <h3>SEO - Pozycjowanie</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi laborum ducimus sint ea est
                             veritatis velit ut. Eum architecto sit, deleniti aut aspernatur dolore, repellat, labore
-                            possimus illum hic rem?</p>
+                            possimus illum hic rem?2</p>
                     </div>
                 </div>
                 <div class="aboutus__box">
